6888573: class data sharing does not always disable large pages

Reviewed-by: phh